Fix: `UserNavigation` inbox circle notification alignment

--- a/src/modules/pages/components/NavigationWrapper/UserNavigation.css
+++ b/src/modules/pages/components/NavigationWrapper/UserNavigation.css
@@ -27,8 +27,8 @@
 
   &::after {
     display: inline-block;
-    margin-bottom: 1px;
-    margin-left: 3px;
+    margin-bottom: 8px;
+    margin-left: -5px;
     height: 8px;
     width: 8px;
     position: absolute;
